--- a/app/templates/artist.html
+++ b/app/templates/artist.html
@@ -1,6 +1,9 @@
 {% from "_datalist.html" import datalist %}
 {% extends "layout.html" %}
-{% block head_extras %}<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">{% endblock %}
+{% block head_extras %}
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+	<meta name="csrf-token" content="{{ csrf_token }}">
+{% endblock %}
 {% block title %}Parks Database – {{ artist.name|capitalize }}{% endblock %}
 {% block content %}
 {% if artist %}
@@ -26,7 +29,7 @@
 		</div>
 
 		{% if form.errors %}
-		
+
 			<div class="[ fixed-top ]">
 				{% for field_name, field_errors in form.errors|dictsort if field_errors %}
 					{% for error in field_errors %}
